# padapto

./: README.md  pyproject.toml
examples/: align_forest.py  align_seq.py  edition.py  gettotalsize.py
src/padapto/: circuit.py  collections.py
src/padapto/algebras/: __init__.py  cost.py  counter.py  group.py  join.py  lex.py  limit.py  pareto.py  power.py  signature.py  trace.py
src/padapto/structure/: __init__.py  grammar.py  pattern.py
tests/padapto/: test_circuit.py  test_collections.py
tests/padapto/algebras/: test_cost.py  test_counter.py  test_group.py  test_join.py  test_lex.py  test_limit.py  test_pareto.py  test_power.py  test_signature.py  test_trace.py
tests/padapto/structure/: test_grammar.py  test_pattern.py
